# airport-ready-mcp

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  render.yaml
.agents/skills/qa-release/: SKILL.md
.agents/skills/response-contract/: SKILL.md
.agents/skills/source-registry/: SKILL.md
.codex/: config.toml
.github/workflows/: canary.yml  ci.yml
docs/: CODEX_PROMPTS.md  DEV_COMMANDS.md  EXEC_PLAN.md  LAUNCH_CHECKLIST.md  MCP_API_SPEC.md  PRD.md  QA_CORPUS.md  QA_PLAN.md  SOURCE_REGISTRY.md
src/departure_ready/: __init__.py  catalog.py  contracts.py  settings.py  smoke.py
src/departure_ready/api/: app.py
src/departure_ready/connectors/: __init__.py  base.py  iiac_facilities.py  iiac_flight.py  iiac_parking.py  kac_facilities.py  kac_flight.py  kac_parking.py  kac_processing.py  policy.py
src/departure_ready/domain/: models.py
src/departure_ready/mcp/: server.py
src/departure_ready/services/: baggage.py  common.py  customs.py  facilities.py  flight.py  guide.py  parking.py  readiness.py  self_service.py
tests/: test_api.py  test_bootstrap.py  test_catalog.py  test_connectors.py  test_contracts.py  test_facilities_wave4.py  test_future_flight_surface_wave3.py  test_future_flight_wave3.py  test_kac_facilities_connector.py  test_launch_wave2.py  test_launch_wave5.py  test_live_services.py  test_mcp.py  test_parking_wave3.py  test_policy_services.py  test_qa_corpus.py  test_readiness_wave2.py  test_readiness_wave4.py  test_remote_launch_wave3.py  test_remote_mcp_wave5.py  test_settings.py  test_surface_wave2.py
