[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "departure-ready-mcp"
version = "0.1.0"
description = "Official-source-first airport departure readiness MCP + HTTP API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.0",
  "mcp>=1.10.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
departure-ready-api = "departure_ready.api.app:main"
departure-ready-mcp = "departure_ready.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/departure_ready"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
